# airbnb_modeling

./: README.md  mapalol_project4.ipynb  pyproject.toml
data/: listings.csv
src/: mapalol_project3.ipynb
src/airbnb_analysis/: __main__.py  analysis.py  inference.py  modeling.py  summary.py
