
[tool.poetry]
name = "airbnb_analysis"
version = "0.1.0"
description = "Airbnb Amsterdam Price Prediction Report"
authors = ["Mapalo Lukashi <mlukashi@mail.yu.edu>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
seaborn = "^0.11"
matplotlib = "^3.4"
scipy = "^1.8.1"
IPython = "^8.3.0"
scikit-learn = "^1.0.1"
joblib = "^1.1.0" 

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"airbnb_analysis" = ["*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 

